# tapo-rest

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.homelab  README.md  devices.json  docker-build.nu  docker-build.rsh
.github/workflows/: build.yaml  docker.yml
src/: cmd.rs  config.rs  devices.rs  logger.rs  main.rs
src/server/: actions.rs  auth.rs  discovery.rs  errors.rs  loader.rs  mod.rs  sessions.rs  state.rs
