[package]
name = "tapo-rest"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", default-features = false, features = [
  "http1",
  "http2",
  "tokio",
  "json",
  "query",
  "macros", # For debugging with #[axum::debug_handler]
] }
clap = { version = "4.5.46", features = ["derive", "env"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tapo = "0.8.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6.6", features = ["cors"] }
dirs = "6.0.0"
paste = "1.0.15"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "serde",
] }
log = { version = "0.4.27", features = ["std"] }
colored = "3.0.0"
